fix: visually align images

--- a/public/car/style.css
+++ b/public/car/style.css
@@ -157,6 +157,7 @@ a {
   width: 211px;
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-right: -32px;
 }
 
 .section {
